Bug 333604 - KDE Telepathy contactlist: tooltip icons need scaling
Summary: KDE Telepathy contactlist: tooltip icons need scaling
Status: RESOLVED FIXED
Alias: None
Product: telepathy
Classification: Unmaintained
Component: contactlist (other bugs)
Version First Reported In: 0.8.0
Platform: Kubuntu Linux
: NOR minor
Target Milestone: Future
Assignee: Telepathy Bugs
URL:
Keywords: junior-jobs
Depends on:
Blocks:
 
Reported: 2014-04-19 00:34 UTC by Fabio Correa
Modified: 2014-05-03 18:49 UTC (History)
2 users (show)

See Also:
Latest Commit:
Version Fixed/Implemented In: 0.8.2
Sentry Crash Report:


Attachments
Screenshot (36.47 KB, image/jpeg)
2014-04-19 00:36 UTC, Fabio Correa
Details

Note You need to log in before you can comment on or make changes to this bug.
Description Fabio Correa 2014-04-19 00:34:37 UTC
Hello, the icons in the tooltip of the contactlist presence selector need appropriate scaling. Please see attached image.

Reproducible: Always




This is just a minor annoyance. Keep up the good work with KDE Telepathy.
Comment 1 Fabio Correa 2014-04-19 00:36:14 UTC
Created attachment 86162 [details]
Screenshot
Comment 2 David Edmundson 2014-04-19 09:07:54 UTC
Oops, thanks.
Comment 3 Olaf Piesche 2014-05-03 18:01:16 UTC
Fix submitted for review (review request 117977).
Comment 4 David Edmundson 2014-05-03 18:49:41 UTC
Git commit c78153d5b17f0673ae5d7dbc6d5e7336dedf344e by David Edmundson, on behalf of Olaf Piesche.
Committed on 03/05/2014 at 18:49.
Pushed by davidedmundson into branch 'kde-telepathy-0.8'.

Scale icons in presence chooser.

Scaling icons in the presence chooser tool tip.
The tooltip contains HTML, and the icons for accounts weren't scaled at all.

REVIEW: 117977
FIXED-IN: 0.8.2

M  +1    -1    global-presence-chooser.cpp

http://commits.kde.org/telepathy-contact-list/c78153d5b17f0673ae5d7dbc6d5e7336dedf344e