Scale icons in presence chooser.

Scaling icons in the presence chooser tool tip.
The tooltip contains HTML, and the icons for accounts weren't scaled at all.

REVIEW: 117977
BUG: 333604
FIXED-IN: 0.8.2